--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar class="custom-toolbar">
-  <mat-icon>menu</mat-icon>
+
+  <img src="images/logoicon.png" alt="logoicon" class="logoIcon">
+  <span class="website-name">MedLearn</span>
+  <span class="espacio"></span>
   <div>
     <button mat-button [matMenuTriggerFor]="menuEnfermedad" style="color: white">
       Enfermedad
@@ -7,9 +10,12 @@
     <button mat-button [matMenuTriggerFor]="menuDietas" style="color: white">
       Dietas
     </button>
+    <button mat-button [matMenuTriggerFor]="menuUsuarios" style="color: white">
+      Usuarios
+    </button>
   </div>
 </mat-toolbar>
- 
+
 <mat-menu #menuEnfermedad="matMenu">
   <button mat-menu-item routerLink="/Enfermedades">Listar</button>
   <button mat-menu-item routerLink="/Enfermedades/nuevoenf">Registrar</button>
@@ -18,6 +24,11 @@
 <mat-menu #menuDietas="matMenu">
   <button mat-menu-item routerLink="/Dietas">Listar</button>
   <button mat-menu-item routerLink="/Dietas/nuevodt">Registrar</button>
+</mat-menu>
+
+<mat-menu #menuUsuarios="matMenu">
+  <button mat-menu-item routerLink="/Usuarioss">Listar</button>
+  <button mat-menu-item routerLink="/Usuarioss/nuevous">Registrar</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
