--- a/src/app/components/users/insertarus/insertarus.component.html
+++ b/src/app/components/users/insertarus/insertarus.component.html
@@ -13,44 +13,49 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Nombre Completo</mat-label>
-        <input matInput placeholder="Nombres y Apellidos" formControlName="hnombre" />
+        <input matInput *ngIf="edicion" placeholder="Nombres y Apellidos" formControlName="hnombre" readonly="true"/>
+        <input matInput *ngIf="!edicion" placeholder="Nombres y Apellidos" formControlName="hnombre" />
       </mat-form-field>
       <br />
 
       <mat-form-field class="example-full-width">
         <mat-label>Nombre de Usuario</mat-label>
-        <input matInput placeholder="Nombre de Usuario" formControlName="husername" />
+        <input matInput *ngIf="edicion" placeholder="Nombre de Usuario" formControlName="husername" readonly="true"/>
+        <input matInput *ngIf="!edicion" placeholder="Nombre de Usuario" formControlName="husername" />
       </mat-form-field>
       <br />
 
       <mat-form-field class="example-full-width">
         <mat-label>Correo</mat-label>
-        <input matInput placeholder="example@gmail.com" formControlName="hcorreo" />
+        <input matInput *ngIf="edicion" placeholder="example@gmail.com" formControlName="hcorreo" readonly="true"/>
+        <input matInput *ngIf="!edicion" placeholder="example@gmail.com" formControlName="hcorreo" />
       </mat-form-field>
 
       <br />
       <mat-form-field class="example-full-width">
         <mat-label>Certificado</mat-label>
-        <input matInput placeholder="imagen" formControlName="hcertificado" />
+        <input matInput *ngIf="edicion" placeholder="imagen" formControlName="hcertificado" readonly="true"/>
+        <input matInput *ngIf="!edicion" placeholder="imagen" formControlName="hcertificado" />
       </mat-form-field>
 
       <br />
 
       <mat-form-field class="example-full-width">
         <mat-label>Contraseña</mat-label>
-        <input matInput placeholder="contraseña" formControlName="hpassword" />
+        <input matInput *ngIf="edicion" placeholder="contraseña" formControlName="hpassword" readonly="true"/>
+        <input matInput *ngIf="!edicion" placeholder="contraseña" formControlName="hpassword" />
       </mat-form-field>
 
       <br />
 
 
       <div style="text-align: center">
-        <mat-checkbox class="example-margin" formControlName="henabled">Estado Usuario</mat-checkbox>
+        <mat-checkbox class="example-margin" *ngIf="edicion" formControlName="henabled" [disabled]="edicion">Estado Usuario</mat-checkbox>
       </div>
 
       <div style="text-align: center">
-        <button mat-flat-button  color="warn" *ngIf="!edicion">Registrar</button>
-        <button mat-flat-button  color="warn" *ngIf="edicion">Dar de Baja a Usuario</button>
+        <button mat-flat-button color="warn" *ngIf="!edicion">Registrar</button>
+        <button mat-flat-button (click)="darDeBaja()" color="warn" *ngIf="edicion">Dar de Baja a Usuario</button>
       </div>
     </form>
   </div>
