--- a/src/app/components/diet/listardt/listardt.component.html
+++ b/src/app/components/diet/listardt/listardt.component.html
@@ -2,44 +2,74 @@
     <div style="text-align: center;margin: 5%;"><h1>Lista de Dietas</h1></div>
     <div>
       <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
-  
+        
+        <!--Boton de acción que se guarda la fecha 
           <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> Código. </th>
             <td mat-cell *matCellDef="let element"> {{element.idDiet}} </td>
+          </ng-container> -->
+          <ng-container matColumnDef="c1">
+            <th mat-header-cell *matHeaderCellDef> Tiempo estimado de la dieta </th>
+            <td mat-cell *matCellDef="let element"> {{element.durationDiet}} </td>
           </ng-container>
+
         
-  
+          <ng-container matColumnDef="comenzardieta">
+            <th mat-header-cell *matHeaderCellDef> Comenzar Dieta</th>
+            <td mat-cell *matCellDef="let element" (click)="startDiet(element.diet)">
+            <mat-icon style="color: rgb(30, 234, 53);">play_arrow</mat-icon> 
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="finalizardieta">
+            <th mat-header-cell *matHeaderCellDef> Finalizar Dieta </th>
+            <td mat-cell *matCellDef="let element" (click)="finishDiet(element.diet)">
+            <mat-icon style="color: rgb(234, 43, 14);">stop</mat-icon> 
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="c2">
             <th mat-header-cell *matHeaderCellDef> Descripción de Dieta </th>
             <td mat-cell *matCellDef="let element"> {{element.descriptionDiet}} </td>
           </ng-container>
         
-          <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> Duración de la dieta </th>
-            <td mat-cell *matCellDef="let element"> {{element.durationDiet}} </td>
+          <!-- Botón de acción para ver ingredientes y cantidades -->
+          
+          <ng-container matColumnDef="ingredientes">
+            <th mat-header-cell *matHeaderCellDef> Ver ingredientes y cantidades </th>
+            <td mat-cell *matCellDef="let element" [routerLink]="['edicionesdt',element.idDiet]">
+               <mat-icon style="color: rgb(15, 13, 13);"> edit </mat-icon>
+            </td>
           </ng-container>
+
+          <!-- Botón de like  -->
         
-          <ng-container matColumnDef="c4">
-            <th mat-header-cell *matHeaderCellDef> Calificación de dietas  </th>
-            <td mat-cell *matCellDef="let element"> {{element.qualificationDiet}} </td>
+
+          <ng-container matColumnDef="like">
+            <th mat-header-cell *matHeaderCellDef> Like </th>
+            <td mat-cell *matCellDef="let element" (click)="addLike(element.diet)">
+            <mat-icon style="color: rgb(105, 148, 238);">delete</mat-icon> 
+            </td>
           </ng-container>
-  
-          <ng-container matColumnDef="c5">
-              <th mat-header-cell *matHeaderCellDef> Comenzar dieta </th>
-              <td mat-cell *matCellDef="let element"> {{element.startDayDiet}} </td>
+          <!-- Botón de dislike -->
+          <ng-container matColumnDef="dislike">
+            <th mat-header-cell *matHeaderCellDef> Dislike </th>
+            <td mat-cell *matCellDef="let element" (click)="addDislike(element.diet)">
+            <mat-icon style="color: rgb(226, 11, 11);">delete</mat-icon> 
+            </td>
           </ng-container>
-          <ng-container matColumnDef="c6">
-            <th mat-header-cell *matHeaderCellDef> Finalizar dieta </th>
-            <td mat-cell *matCellDef="let element"> {{element.finishDayDiet}} </td>
-        </ng-container>
-        <ng-container matColumnDef="c7">
-          <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
-          <td mat-cell *matCellDef="let element"> {{element.illness.idIllness}} </td>
-      </ng-container>
-      <ng-container matColumnDef="c7">
-        <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
-        <td mat-cell *matCellDef="let element"> {{element.user.idIllness}} </td>
-    </ng-container>
+          
+<!--
+          <ng-container matColumnDef="c7">
+            <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
+            <td mat-cell *matCellDef="let element"> {{element.illness.idIllness}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="c7">
+            <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
+            <td mat-cell *matCellDef="let element"> {{element.user.idIllness}} </td>
+          </ng-container>
+          -->
           <ng-container matColumnDef="accion01">
               <th mat-header-cell *matHeaderCellDef> Eliminar </th>
               <td mat-cell *matCellDef="let element" (click)="delete(element.idDiet)">
