--- a/src/app/components/hospital/hospital.component.html
+++ b/src/app/components/hospital/hospital.component.html
@@ -1,1 +1,4 @@
-<p>hospital works!</p>
+<router-outlet></router-outlet>
+<div [hidden]="route.children.length !==0">
+    <app-listarhp></app-listarhp>
+</div>
