--- a/src/app/components/diet/insertardt/insertardt.component.html
+++ b/src/app/components/diet/insertardt/insertardt.component.html
@@ -2,25 +2,25 @@
     <div class="container" style="text-align: center;margin:5%"><h1>Registro de Dietas</h1></div>
     <div class="container" style="text-align: center">
       <form [formGroup]="form" (submit)="insertar()" >
-  
+
         <mat-form-field class="example-full-width" *ngIf="edicion">
           <mat-label>Código</mat-label>
           <input matInput formControlName="codigod" readonly="true"/>
         </mat-form-field>
-  
+
         <br />
         <mat-form-field class="example-full-width">
           <mat-label>Descripción de Dieta</mat-label>
           <input matInput placeholder="Ejem. Preparar un jugo verde todas las mañanas" formControlName="descriptiond" />
         </mat-form-field>
-  
+
         <br />
-  
+
         <mat-form-field class="example-full-width">
           <mat-label>Duración de la dieta</mat-label>
           <input matInput placeholder="Ejem. 7 días"  formControlName="durationd" />
         </mat-form-field>
-  
+
         <br />
         <!-- Campo para la fecha de la incidencia -->
         <mat-form-field class="example-full-width">
@@ -40,15 +40,17 @@
         <br />
 
         <mat-form-field appearance="fill">
-            <mat-label>ID del Contrato</mat-label>
+            <mat-label>Enfermedad</mat-label>
             <mat-select formControlName="illnessd">@for(food of listaEnfermedades; track food) {
               <mat-option [value]="food.value">{{ food.viewValue }}</mat-option>}
             </mat-select>
         </mat-form-field>
+
+
         <div style="text-align: center;">
           <button mat-flat-button  color="warn">Registrar</button>
         </div>
       </form>
     </div>
   </div>
-  
+
