--- a/src/app/components/treatments/listartr/listartr.component.html
+++ b/src/app/components/treatments/listartr/listartr.component.html
@@ -8,25 +8,34 @@
         <td mat-cell *matCellDef="let element"> {{element.idTreatment}} </td>
       </ng-container>
 
-
       <ng-container matColumnDef="c2">
         <th mat-header-cell *matHeaderCellDef> Descripción de Tratamiento </th>
         <td mat-cell *matCellDef="let element"> {{element.descriptionTreatment}} </td>
       </ng-container>
 
       <ng-container matColumnDef="c3">
-        <th mat-header-cell *matHeaderCellDef> Comenzar Tratamiento </th>
-        <td mat-cell *matCellDef="let element"> {{element.startDayTreatment}} </td>
+        <th mat-header-cell *matHeaderCellDef> Duracion del Trataamiento </th>
+        <td mat-cell *matCellDef="let element"> {{element.durationTreatment}} </td>
       </ng-container>
 
       <ng-container matColumnDef="c4">
-        <th mat-header-cell *matHeaderCellDef> Finalizar Tratamiento  </th>
+        <th mat-header-cell *matHeaderCellDef> Dia Iniciado  </th>
+        <td mat-cell *matCellDef="let element"> {{element.startDayTreatment}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="c5">
+        <th mat-header-cell *matHeaderCellDef> Dia terminado </th>
         <td mat-cell *matCellDef="let element"> {{element.finishDayTreatment}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="c7">
-        <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
+      <ng-container matColumnDef="c6">
+        <th mat-header-cell *matHeaderCellDef> Enfermedad </th>
         <td mat-cell *matCellDef="let element"> {{element.illness.idIllness}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="c7">
+        <th mat-header-cell *matHeaderCellDef> Usuario </th>
+        <td mat-cell *matCellDef="let element"> {{element.user.idUser}} </td>
       </ng-container>
 
       <ng-container matColumnDef="accion01">
