--- a/src/app/components/users/listarus/listarus.component.html
+++ b/src/app/components/users/listarus/listarus.component.html
@@ -29,7 +29,7 @@
 
       <ng-container matColumnDef="accion01">
         <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-        <td mat-cell *matCellDef="let element" [routerLink]="['dardebaja',element.idUser]" >
+        <td mat-cell *matCellDef="let element" [routerLink]="['modificar',element.idUser]" >
           <mat-icon style="color:#f4310a ;">delete</mat-icon>
         </td>
       </ng-container>
