--- a/src/app/components/illness/insertar/insertar.component.html
+++ b/src/app/components/illness/insertar/insertar.component.html
@@ -9,7 +9,6 @@
                 <mat-label>Código de enfermedad</mat-label>
                 <input matInput formControlName="codigo" readonly="true"/>
               </mat-form-field>
-        
             <br />
             <!-- nombre -->
             <mat-form-field class="example-full-width">
@@ -37,7 +36,7 @@
             <!--contador-->
             <mat-form-field class="example-full-width">
                 <mat-label>Contador de Vistas</mat-label>
-                <input matInput type="number" placeholder="Ej. 0" formControlName="hcontador" formControlName="codigo" readonly="true" />
+                <input matInput type="number" placeholder="Ej. 0" formControlName="hcontador"   />
             </mat-form-field>
             <br />
             <div class="button-container">
