--- a/src/app/components/diet/listardt/listardt.component.html
+++ b/src/app/components/diet/listardt/listardt.component.html
@@ -3,12 +3,23 @@
     <div>
       <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
         
-        <!--Boton de acción que se guarda la fecha 
+          <!--Boton de acción que se guarda la fecha 
           <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> Código. </th>
             <td mat-cell *matCellDef="let element"> {{element.idDiet}} </td>
           </ng-container> -->
+
           <ng-container matColumnDef="c1">
+            <th mat-header-cell *matHeaderCellDef> Nombre de usuario </th>
+            <td mat-cell *matCellDef="let element"> {{element.user.fullnameUser}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="c2">
+            <th mat-header-cell *matHeaderCellDef> Imagen </th>
+            <td mat-cell *matCellDef="let element"> {{element.illness.imageIllness}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="c3">
             <th mat-header-cell *matHeaderCellDef> Tiempo estimado de la dieta </th>
             <td mat-cell *matCellDef="let element"> {{element.durationDiet}} </td>
           </ng-container>
@@ -28,7 +39,7 @@
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="c2">
+          <ng-container matColumnDef="c4">
             <th mat-header-cell *matHeaderCellDef> Descripción de Dieta </th>
             <td mat-cell *matCellDef="let element"> {{element.descriptionDiet}} </td>
           </ng-container>
@@ -43,7 +54,6 @@
           </ng-container>
 
           <!-- Botón de like  -->
-        
 
           <ng-container matColumnDef="like">
             <th mat-header-cell *matHeaderCellDef> Like </th>
@@ -58,18 +68,7 @@
             <mat-icon style="color: rgb(226, 11, 11);">delete</mat-icon> 
             </td>
           </ng-container>
-          
-<!--
-          <ng-container matColumnDef="c7">
-            <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
-            <td mat-cell *matCellDef="let element"> {{element.illness.idIllness}} </td>
-          </ng-container>
 
-          <ng-container matColumnDef="c7">
-            <th mat-header-cell *matHeaderCellDef> Código de enfermedad </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.idIllness}} </td>
-          </ng-container>
-          -->
           <ng-container matColumnDef="accion01">
               <th mat-header-cell *matHeaderCellDef> Eliminar </th>
               <td mat-cell *matCellDef="let element" (click)="delete(element.idDiet)">
