--- a/src/app/components/hospital/crearhp/crearhp.component.html
+++ b/src/app/components/hospital/crearhp/crearhp.component.html
@@ -1,1 +1,30 @@
-<p>crearhp works!</p>
+<div class="title-container">
+  <div class="container" style="text-align: center;margin:5%"><h3>Registrar ubicación de trabajo</h3></div>
+  <div class="container" style="text-align: center">
+    <form [formGroup]="form" (submit)="agregar()" >
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Nombre del Hospital</mat-label>
+        <input matInput placeholder="ejem. Hospital Sonrisas" formControlName="hnameHospital"/>
+      </mat-form-field>
+      <br />
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Dirección</mat-label>
+        <input #inputField matInput [placeholder]="placeholder" />
+      </mat-form-field>
+      <br />
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Contacto</mat-label>
+        <input matInput placeholder="ejem. 000 000 000" formControlName="hcontactHospital" />
+      </mat-form-field>
+      <br />
+
+      <div style="text-align: center;">
+        <button mat-flat-button  color="warn">Registrar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
