--- a/src/app/components/hospital/listarhp/listarhp.component.html
+++ b/src/app/components/hospital/listarhp/listarhp.component.html
@@ -1,4 +1,4 @@
-<!-- listarhp.component.html -->
+<!--listarhp.component.html 
 <div class="container">
   <div class="lista">
     <div class="filtro">
@@ -26,3 +26,4 @@
     <div id="map" style="height: 100%; width: 100%;"></div>
   </div>
 </div>
+-->
