--- a/src/app/components/illness/insertar/insertar.component.css
+++ b/src/app/components/illness/insertar/insertar.component.css
@@ -35,3 +35,28 @@ button[mat-flat-button] {
     font-size: 1em;
     padding: 10px 20px;
 }
+.file-drop-area {
+    width: 100%;
+    padding: 20px;
+    border: 2px dashed #cccccc;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .file-drop-area.drag-over {
+    background-color: #f0f0f0;
+  }
+  
+  .preview-container {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .preview-image {
+    max-width: 100%;
+    max-height: 200px;
+    border-radius: 10px;
+    margin-top: 10px;
+  }
