--- a/src/app/components/illness/insertar/insertar.component.html
+++ b/src/app/components/illness/insertar/insertar.component.html
@@ -30,9 +30,22 @@
             <!--subir la imagen -->
             <mat-form-field class="example-full-width">
                 <mat-label>Ruta de Imagen</mat-label>
-                <input matInput placeholder="Ej. ruta/a/la/imagen.jpg" formControlName="himage" />
+                <input matInput placeholder="Ej. nombre-de-la-imagen.jpg" formControlName="himage" />
             </mat-form-field>
             <br />
+            <!-- Seleccionar archivo -->
+            <div class="file-drop-area" (click)="fileInput.click()">
+                <p *ngIf="!fileName">Arrastra una imagen aquí o haz clic para seleccionar</p>
+                <p *ngIf="fileName">Imagen seleccionada: {{ fileName }}</p>
+                <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)" accept=".png, .jpg, .jpeg" />
+            </div>
+            <br />
+        <!-- Previsualización de la imagen -->
+        <div *ngIf="imageURL" class="preview-container">
+            <h3>Previsualización de la Imagen</h3>
+            <img [src]="imageURL" alt="Previsualización de la Imagen" class="preview-image" />
+        </div>
+        <br />
             <!--contador-->
             <mat-form-field class="example-full-width">
                 <mat-label>Contador de Vistas</mat-label>
