--- a/src/app/components/diet/listardt/listardt.component.html
+++ b/src/app/components/diet/listardt/listardt.component.html
@@ -1,90 +1,61 @@
 <div class="container">
-    <div style="text-align: center;margin: 5%;"><h1>Lista de Dietas</h1></div>
-    <div>
-      <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
+    <div style="text-align: center;margin: 5%;" class="title-container"><h1>Lista de Dietas</h1></div>
+    <div class="card-container">
+      <mat-card *ngFor="let element of datasource.data" class="card">
         
           <!--Boton de acción que se guarda la fecha 
           <ng-container matColumnDef="c1">
             <th mat-header-cell *matHeaderCellDef> Código. </th>
             <td mat-cell *matCellDef="let element"> {{element.idDiet}} </td>
           </ng-container> -->
+          <mat-card-header>
+            <button mat-raised-button color="primary" [routerLink]="['edicionesdt',element.idDiet]" class="edit-btn" style="margin-right: 5px;">
+              Editar
+              <mat-icon>edit</mat-icon>
+            </button>
 
-          <ng-container matColumnDef="c1">
-            <th mat-header-cell *matHeaderCellDef> Nombre de usuario </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.fullnameUser}} </td>
-          </ng-container>
+            <button mat-raised-button color="warn" (click)="delete(element.idDiet)" class="delete-btn">
+              Eliminar
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-card-header>
+          <mat-card-content> 
+            <mat-card-title>{{element.user.fullnameUser}}</mat-card-title>
+          </mat-card-content>
+          <mat-card-content>
+            <p><strong>Descripción de Dieta</strong></p>
+          </mat-card-content>
+          <mat-card-content>
+            <p>{{element.descriptionDiet}}</p>
+          </mat-card-content>
 
-          <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> Imagen </th>
-            <td mat-cell *matCellDef="let element"> {{element.illness.imageIllness}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> Tiempo estimado de la dieta </th>
-            <td mat-cell *matCellDef="let element"> {{element.durationDiet}} </td>
-          </ng-container>
-
-        
-          <ng-container matColumnDef="comenzardieta">
-            <th mat-header-cell *matHeaderCellDef> Comenzar Dieta</th>
-            <td mat-cell *matCellDef="let element" (click)="startDiet(element.diet)">
-            <mat-icon style="color: rgb(30, 234, 53);">play_arrow</mat-icon> 
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="finalizardieta">
-            <th mat-header-cell *matHeaderCellDef> Finalizar Dieta </th>
-            <td mat-cell *matCellDef="let element" (click)="finishDiet(element.diet)">
-            <mat-icon style="color: rgb(234, 43, 14);">stop</mat-icon> 
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="c4">
-            <th mat-header-cell *matHeaderCellDef> Descripción de Dieta </th>
-            <td mat-cell *matCellDef="let element"> {{element.descriptionDiet}} </td>
-          </ng-container>
-        
+          <mat-card-subtitle>Tiempo estimado de la dieta: {{ element.durationDiet }} días</mat-card-subtitle>
+          <mat-card-actions >
+            <button mat-button (click)="startDiet(element)" class="start-button">
+              <mat-icon style="color: rgb(30, 234, 53);">play_arrow</mat-icon> Comenzar dieta
+            </button>
+            <button mat-button (click)="finishDiet(element)" class="finish-button">
+              <mat-icon style="color: rgb(234, 43, 14);">stop</mat-icon> Finalizar dieta
+            </button>
+          </mat-card-actions>
           <!-- Botón de acción para ver ingredientes y cantidades -->
-          
-          <ng-container matColumnDef="ingredientes">
-            <th mat-header-cell *matHeaderCellDef> Ver ingredientes y cantidades </th>
-            <td mat-cell *matCellDef="let element" [routerLink]="['edicionesdt',element.idDiet]">
-               <mat-icon style="color: rgb(15, 13, 13);"> edit </mat-icon>
-            </td>
-          </ng-container>
-
-          <!-- Botón de like  -->
-
-          <ng-container matColumnDef="like">
-            <th mat-header-cell *matHeaderCellDef> Like </th>
-            <td mat-cell *matCellDef="let element" (click)="addLike(element.diet)">
-            <mat-icon style="color: rgb(105, 148, 238);">delete</mat-icon> 
-            </td>
-          </ng-container>
-          <!-- Botón de dislike -->
-          <ng-container matColumnDef="dislike">
-            <th mat-header-cell *matHeaderCellDef> Dislike </th>
-            <td mat-cell *matCellDef="let element" (click)="addDislike(element.diet)">
-            <mat-icon style="color: rgb(226, 11, 11);">delete</mat-icon> 
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="accion01">
-              <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-              <td mat-cell *matCellDef="let element" (click)="delete(element.idDiet)">
-                 <mat-icon style="color: red;">delete</mat-icon> 
-                </td>
-          </ng-container>
-          <ng-container matColumnDef="accion02">
-            <th mat-header-cell *matHeaderCellDef> Editar </th>
-            <td mat-cell *matCellDef="let element" [routerLink]="['edicionesdt',element.idDiet]">
-               <mat-icon style="color: red;"> edit </mat-icon>
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        
-        
+          <mat-card-actions>
+            <button mat-raised-button color="accent" [routerLink]="['edicionesdt',element.idDiet]" class="view-details-btn">
+              Ver ingredientes y cantidades
+            </button>
+          </mat-card-actions>
+          <mat-divider></mat-divider>
+          <div class="like-dislike-section">
+            <button mat-icon-button (click)="addLike(element)">
+              <mat-icon style="color: rgb(105, 148, 238);">thumb_up</mat-icon>
+            </button>
+           <!-- <span class="like-count">{{ element.likeCount || 0 }}</span>-->
+      
+            <button mat-icon-button (click)="addDislike(element)">
+              <mat-icon style="color: rgb(226, 11, 11);">thumb_down</mat-icon>
+            </button>
+           <!-- <span class="dislike-count">{{ element.dislikeCount || 0 }}</span>-->
+          </div>
+        </mat-card>
     </div>
   </div>
