--- a/src/app/components/diet/listardt/listardt.component.html
+++ b/src/app/components/diet/listardt/listardt.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div style="text-align: center;margin: 5%;" class="title-container"><h1>Lista de Dietas</h1></div>
+    <div style="text-align: center;margin: 1%;" class="title-container"><h1>Lista de Dietas</h1></div>
     <div class="card-container">
       <mat-card *ngFor="let element of datasource.data" class="card">
         
@@ -19,17 +19,15 @@
               <mat-icon>delete</mat-icon>
             </button>
           </mat-card-header>
-          <mat-card-content> 
+          
+          <mat-card-content>
             <mat-card-title>{{element.user.fullnameUser}}</mat-card-title>
-          </mat-card-content>
-          <mat-card-content>
+            <p><strong>Nombre del doctor</strong></p>
             <p><strong>Descripción de Dieta</strong></p>
-          </mat-card-content>
-          <mat-card-content>
             <p>{{element.descriptionDiet}}</p>
+            <p>Tiempo estimado de la dieta:</p>
+            <mat-card-subtitle>{{ element.durationDiet }} días</mat-card-subtitle>
           </mat-card-content>
-
-          <mat-card-subtitle>Tiempo estimado de la dieta: {{ element.durationDiet }} días</mat-card-subtitle>
           <mat-card-actions >
             <button mat-button (click)="startDiet(element)" class="start-button">
               <mat-icon style="color: rgb(30, 234, 53);">play_arrow</mat-icon> Comenzar dieta
@@ -41,7 +39,7 @@
           <!-- Botón de acción para ver ingredientes y cantidades -->
           <mat-card-actions>
             <button mat-raised-button color="accent" [routerLink]="['edicionesdt',element.idDiet]" class="view-details-btn">
-              Ver ingredientes y cantidades
+              Ver ingredientes
             </button>
           </mat-card-actions>
           <mat-divider></mat-divider>
