--- a/src/app/components/users/insertarus/insertarus.component.html
+++ b/src/app/components/users/insertarus/insertarus.component.html
@@ -55,49 +55,67 @@
   </div>
 
   <div>
-    <mat-stepper linear="true" *ngIf="!edicion"
+    <mat-stepper *ngIf="!edicion"
     class="example-stepper"
     [orientation]="(stepperOrientation | async)!" #stepper>
-    <mat-step [stepControl]="firstFormGroup" label="Rellena con tus datos">
+    <mat-step [stepControl]="firstFormGroup" label="Rellena con tus datos" errorMessage="Complete el formulario.">
       <form [formGroup]="firstFormGroup">
         <div>
           <br />
-
           <mat-form-field class="example-full-width">
             <mat-label>Nombre Completo</mat-label>
             <input matInput placeholder="Nombres y Apellidos" formControlName="hnombre" required="true"/>
+            <mat-error *ngIf="firstFormGroup.get('hnombre')?.hasError('required')">
+              Campo obligatorio.</mat-error>
           </mat-form-field>
           <br />
 
           <mat-form-field class="example-full-width">
             <mat-label>Nombre de Usuario</mat-label>
             <input matInput placeholder="Nombre de Usuario" formControlName="husername" required="true"/>
+            <mat-error *ngIf="firstFormGroup.get('husername')?.hasError('required')">
+              Campo obligatorio.</mat-error>
           </mat-form-field>
           <br />
 
           <mat-form-field class="example-full-width">
             <mat-label>Correo</mat-label>
-            <input matInput placeholder="example@gmail.com" formControlName="hcorreo" required="true"/>
+            <input type="email" matInput formControlName="hcorreo" placeholder="email@example.com">
+
+            
           </mat-form-field>
           <br />
 
           <mat-form-field class="example-full-width">
-            <mat-label>Contraseña</mat-label>
-            <input matInput placeholder="contraseña" formControlName="hpassword" required="true"/>
+            <mat-label>Generá tu Contraseña</mat-label>
+            <input formControlName="hpassword" matInput [type]="hide() ? 'password' : 'text'" />
+            <mat-error *ngIf="firstFormGroup.get('hpassword')?.hasError('required')">
+            Campo obligatorio.</mat-error>
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="clickEvent($event)"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide()"
+            >
+            <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
           </mat-form-field>
+
         </div>
         <div>
           <button mat-button matStepperNext>Next</button>
         </div>
       </form>
     </mat-step>
-    <mat-step [stepControl]="secondFormGroup" label="Choose an option">
+    <mat-step [stepControl]="secondFormGroup" label="Choose an option" errorMessage="Escoja su Rol.">
       <form [formGroup]="secondFormGroup">
         <div class="button-container">
-          <button mat-button matStepperNext (click)="setAttributeValue('PACIENTE')">Usuario</button>
+          <button mat-button matStepperNext (click)="setAttributeValue('PACIENTE')">Paciente</button>
           <button mat-button matStepperNext (click)="setAttributeValue('NUTRICIONISTA')">Nutricionista</button>
           <button mat-button matStepperNext (click)="setAttributeValue('DOCTOR')">Doctor</button>
         </div>
+        <button mat-button matStepperPrevious>Back</button>
       </form>
     </mat-step>
     <mat-step [stepControl]="thirdFormGroup" label="Fill out your phone number">
