--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,6 @@
     <button mat-button [matMenuTriggerFor]="menuTratamientos" style="color: white">
       Tratamientos
     </button>
-    <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
-      <mat-icon>book</mat-icon>Reportes
-    </button>
   </div>
 </mat-toolbar>
 
@@ -42,5 +39,16 @@
   <button mat-menu-item routerLink="/Usuarioss">Listar</button>
   <button mat-menu-item routerLink="/Usuarioss/nuevous">Registrar</button>
 </mat-menu>
-
+<mat-menu #menuReportes="matMenu">
+  <button mat-menu-item routerLink="/reportes">Listar</button>
+  <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
+</mat-menu>
+<mat-menu #menuHospitales="matMenu">
+  <button mat-menu-item routerLink="/Hospitales">Listar</button>
+  <button mat-menu-item routerLink="/Hospitales/nuevohp">Registrar</button>
+</mat-menu>
+<mat-menu #menuTratamientos="matMenu">
+  <button mat-menu-item routerLink="/Tratamientoss">Listar</button>
+  <button mat-menu-item routerLink="/Tratamientoss/nuevotr">Registrar</button>
+</mat-menu>
 <router-outlet></router-outlet>
