--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,21 @@
     <button mat-button [matMenuTriggerFor]="menuUsuarios" style="color: white">
       Usuarios
     </button>
+    <button mat-button [matMenuTriggerFor]="menuHospitales" style="color: white">
+      Hospitales
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
+      Reportes
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuTratamientos" style="color: white">
+      Tratamientos
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuExercices" style="color: white">
+      Ejercicios
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuFoods" style="color: white">
+      Alimentos
+    </button>
   </div>
 </mat-toolbar>
 
@@ -29,6 +44,28 @@
 <mat-menu #menuUsuarios="matMenu">
   <button mat-menu-item routerLink="/Usuarioss">Listar</button>
   <button mat-menu-item routerLink="/Usuarioss/nuevous">Registrar</button>
+</mat-menu>
+<mat-menu #menuReportes="matMenu">
+  <button mat-menu-item routerLink="/reportes">Listar</button>
+  <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
+  <button mat-menu-item routerLink="/reportes/totalCaloriasporDieta">Reporte de Calorias</button>
+  <button mat-menu-item routerLink="/reportes/totaleEjerciciospoDieta">Reporte de Ejercicios</button>
+</mat-menu>
+<mat-menu #menuFoods="matMenu">
+  <button mat-menu-item routerLink="/Alimentos">Listar</button>
+  <button mat-menu-item routerLink="/Alimentos/nuevofd">Registrar</button>
+</mat-menu>
+<mat-menu #menuExercices="matMenu">
+  <button mat-menu-item routerLink="/Ejercicios">Listar</button>
+  <button mat-menu-item routerLink="/Ejercicios/nuevoex">Registrar</button>
+</mat-menu>
+<mat-menu #menuHospitales="matMenu">
+  <button mat-menu-item routerLink="/Hospitales">Listar</button>
+  <button mat-menu-item routerLink="/Hospitales/nuevohp">Registrar</button>
+</mat-menu>
+<mat-menu #menuTratamientos="matMenu">
+  <button mat-menu-item routerLink="/Tratamientoss">Listar</button>
+  <button mat-menu-item routerLink="/Tratamientoss/nuevotr">Registrar</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
